# programming-labs

./: .gitignore  README.md
.vscode-setup/: README.md
RGR-15/: README.md  config.cfg  config.json  snake.cpp  snake_game.html
lab-00/: Makefile  README.md
lab-00/task0/: README.md
lab-00/task1/: README.md  output.c
lab-00/task2/: README.md  overflow.c
lab-00/task3/: README.md  chars.c
lab-00/task4/: README.md  after.c  before.c
lab-01/: Makefile  README.md
lab-01/grade-3/: README.md  leap.c
lab-01/grade-4/: README.md  temperature.c
lab-01/grade-5/: README.md  area.c
lab-02/: Makefile  README.md  alg08_factorial.c  alg09_maxdigit.c  alg10_reverse.c  alg11_log2.c  alg12_digitsum.c
lab-02-2/: Makefile  README.md
lab-02-2/grade-4/: README.md  square.c
lab-02-2/grade-5/: README.md  stairs.c
lab-02-2/grade-star/: README.md  spiral.c
lab-04/: README.md
lab-05/: README.md
lab-06/: README.md
lab-07/: README.md
lab-08/: README.md
lab-09/: README.md
lab-10/: Makefile  README.md
lab-10/grade-3/: README.md  fraction.c
lab-10/grade-4/: README.md
lab-10/grade-5/: README.md  fraction.c  fraction.h  main.c
lab-10/grade-star/: Makefile  README.md
lab-11/: Makefile  README.md
lab-11/task-1/: README.md  after.c  before.c
lab-11/task-2/: README.md  after.c  before.c
lab-11/task-3/: README.md  after.c  before.c
lab-11/task-4/: README.md  after.c  before.c
lab-12/: Makefile  README.md
lab-12/grade-3/: README.md  main.c
lab-12/grade-4/: Makefile  README.md
lab-12/grade-4/include/: sneakers.h
lab-12/grade-4/src/: main.c  sneakers.c
lab-12/grade-5/: Makefile  README.md
lab-12/grade-5-star/: README.md
lab-12/grade-5-star/include/: sneakers.h
lab-12/grade-5/include/: sneakers.h
lab-12/grade-5/src/: main.c  sneakers.c
lab-12/grade-star/: README.md
lab-12/grade-star/src/: main.c  sneakers.c
lab-12/katysha-roguelike/grade-3/: README.md  main.c
lab-12/katysha-roguelike/grade-4/: README.md
lab-12/katysha-roguelike/grade-5/: README.md
lab-12/katysha-roguelike/grade-star/: README.md
lab-12/sneakers/grade-3/: README.md  main.c
lab-12/sneakers/grade-4/: README.md
lab-12/sneakers/grade-4/include/: sneakers.h
lab-12/sneakers/grade-4/src/: main.c  sneakers.c
lab-12/sneakers/grade-5/: README.md
lab-12/sneakers/grade-5/include/: sneakers.h
lab-12/sneakers/grade-5/src/: main.c  sneakers.c
lab-12/sneakers/grade-star/: README.md
lab-12/sneakers/grade-star/include/: sneakers.h
lab-12/sneakers/grade-star/src/: main.c  sneakers.c
lab-12/star/src/: main.c
lab-13/: CMakeLists.txt  Makefile  README.md
lab-13/grade-3/: .gitignore  Makefile  README.md
lab-13/grade-3/include/: sneakers.h
lab-13/grade-3/src/: sneakers.c
lab-13/grade-4/: .gitignore  README.md
lab-13/grade-4/include/: sneakers.h
lab-13/grade-4/src/: main.c  sneakers.c
lab-13/grade-5/: CMakeLists.txt  README.md
lab-13/grade-5/background/: CMakeLists.txt  background.c
lab-13/grade-5/include/: sneakers.h
lab-13/grade-5/pipes/: CMakeLists.txt  read_pipe.c
lab-13/grade-5/src/: main.c
lab-13/include/: sneakers.h
lab-13/katysha-roguelike/grade-3/: Makefile  README.md  main.c
lab-13/katysha-roguelike/grade-4/: CMakeLists.txt  README.md
lab-13/katysha-roguelike/grade-5/: CMakeLists.txt  README.md
lab-13/sneakers/grade-3/: Makefile  README.md  main.c
lab-13/sneakers/grade-3/src/: main.c  sneakers.c
lab-13/sneakers/grade-4/: CMakeLists.txt  README.md
lab-13/sneakers/grade-5/: CMakeLists.txt  README.md
lab-13/sneakers/grade-5/background/: CMakeLists.txt
lab-13/sneakers/grade-5/pipes/: CMakeLists.txt  write_pipe.c
lab-13/sneakers/grade-5/src/: main.c
lab-13/src/: sneakers.c
lab-14/: Makefile  README.md
lab-14/grade-3/: Makefile  README.md  main.c
lab-14/grade-4/: Makefile  README.md  main.c
lab-14/grade-4/src/: list.c
lab-14/grade-5/: README.md  main.c
lab-14/grade-5/src/: list.c  main.c
lab-14/katysha-roguelike/grade-3/: README.md  main.c
lab-14/katysha-roguelike/grade-4/: README.md  main.c
lab-14/katysha-roguelike/grade-5/: README.md  main.c
lab-14/sneakers/grade-3/: README.md  main.c
lab-14/sneakers/grade-4/: README.md
lab-14/sneakers/grade-4/include/: list.h
lab-14/sneakers/grade-4/src/: main.c
lab-14/sneakers/grade-5/: Makefile  README.md
lab-14/sneakers/grade-5/include/: list.h
lab-14/sneakers/grade-5/src/: list.c  main.c
lab-15/: Makefile  README.md
lab-15-2/: DEBUG_LOG.md  Makefile  README.md
lab-15-2/src/: task1.c  task2.c  task3.c  task4.c  task5.c  task_star.c
lab-15/grade-3/: Makefile  README.md  main_syscall.c  staff.csv
lab-15/grade-4/: README.md  employee.c  employee.h  main.c  menu.c  menu.h
lab-15/grade-5/: Makefile  README.md  books.csv  employee.c  employee.h  main.c  menu.c  menu.h  record.c  record.h  staff2.csv
lab-15/sneakers/: README.md
lab-15/sneakers/grade-3/: Makefile  README.md  main.c
lab-15/sneakers/grade-4/: Makefile  README.md  employee.c  employee.h  menu.c
lab-15/sneakers/grade-5/: Makefile  README.md  employee.c  employee.h  menu.c  menu.h
lab-16/: Makefile  README.md  threads.md
lab-16/grade-4/: Makefile  README.md  benchmark.csv  benchmark.py  ex7_sync.c  ex8_matmul.c  ex9_benchmark.c
lab-16/grade-5/: Makefile  README.md  chat.c  msgqueue.c  msgqueue.h
lab-16/grade-star/: Makefile  README.md  din_phil.c  din_phil_fixed.c
lab-17/: README.md
lab-17/grade-3/: test_simple.c
lab-18/src/: main.cpp
lab-19/: CMakeLists.txt  README.md
lab-19/atm/: atm_engine.cpp  atm_engine.h  card.h  tui.h
lab-19/atm/tests/: test_account.cpp  test_card.cpp  test_journal.cpp
lab-4/: README.md
lab-5/: README.md
lab-9/: README.md  sort.c
